# Shadow

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake
Sandbox/: CMakeLists.txt  cmake_install.cmake  imgui.ini
Sandbox/Sandbox.dir/Debug/Sandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Sandbox/Sandbox.dir/Release/Sandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Sandbox/src/: GameLayer.cpp  GameLayer.hpp  InstancedRendering.cpp  InstancedRendering.hpp  Level.cpp  Level.hpp  OffscreenRendering.cpp  OffscreenRendering.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Player.cpp  Player.hpp  Sanbox2D.cpp  Sandbox2D.hpp  SandboxApp.cpp
Shadow/: CMakeLists.txt  cmake_install.cmake
Shadow/Shadow.dir/Debug/Shadow.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Shadow/Shadow.dir/Release/Shadow.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Shadow/assets/meshes/AZKi/: AZKi.usdz
Shadow/assets/meshes/foxy/: license.txt  scene.gltf
Shadow/assets/meshes/kuromi_my_melody/: license.txt  scene.gltf
Shadow/assets/meshes/large_boobs/: license.txt  scene.gltf
Shadow/assets/meshes/leatherface/: scene.gltf
Shadow/assets/meshes/school/source/: model.dae
Shadow/assets/meshes/yuuka/: license.txt  scene.gltf
Shadow/assets/shaders/: attachmentRead.frag  attachmentRead.vert  attachmentReadFrag.spv  attachmentReadVert.spv  attachmentWrite.frag  attachmentWrite.vert  attachmentWriteFrag.spv  attachmentWriteVert.spv  blackWhite.frag  blackWhite.frag.spv  compute.glsl  instanced2d.vert  instanced2d.vert.spv  lighting.frag  lighting.frag.spv  lighting.vert  lighting.vert.spv  offscreen.frag  offscreen.frag.spv  offscreen.vert  offscreen.vert.spv  particle.comp  reversedColor.frag  reversedColor.frag.spv  subpassInput.frag  subpassInput.frag.spv  subpassInput.vert  subpassInput.vert.spv  texture.frag  texture.frag.spv  texture.vert  texture.vert.spv
Shadow/src/: Shadow.hpp  shpch.cpp  shpch.hpp
Shadow/src/Shadow/Core/: Core.hpp  EntryPoint.hpp  InputDefines.hpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.hpp  ShEngine.cpp  ShEngine.hpp  Timestep.hpp
Shadow/src/Shadow/Debug/: Instrumentor.hpp
Shadow/src/Shadow/Events/: EventDispatcher.cpp  EventDispatcher.hpp  EventTypes.hpp
Shadow/src/Shadow/ImGui/: ImGuiLayer.cpp  ImGuiLayer.hpp  VkImGuiLayer.cpp  VkImGuiLayer.hpp
Shadow/src/Shadow/Renderer/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  CameraController.cpp  CameraController.hpp  GraphicsContext.cpp  GraphicsContext.hpp  Mesh.cpp  Mesh.hpp  Pipeline.cpp  Pipeline.hpp  PipelineStatesConfig.hpp  RenderCmdBuffer.hpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  Renderpass.cpp  Renderpass.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  UniformBuffer.cpp  UniformBuffer.hpp  VertexDescription.cpp  VertexDescription.hpp
Shadow/src/Shadow/Vulkan/: DescriptorSetAllocator.cpp  DescriptorSetAllocator.hpp  ShadowToVulkanTypes.cpp  ShadowToVulkanTypes.hpp  Swapchain.cpp  Swapchain.hpp  VkTexture.cpp  VkTexture.hpp  VmaUsage.cpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanCmdBuffer.cpp  VulkanCmdBuffer.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanImage.cpp  VulkanImage.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanRenderpass.cpp  VulkanRenderpass.hpp  VulkanShader.cpp  VulkanShader.hpp  VulkanUniformBuffer.cpp  VulkanUniformBuffer.hpp
Shadow/src/Shadow/WindowLayer/: Input.cpp  Input.hpp  Window.cpp  Window.hpp
renderDoc/: renderdoc.json
scripts/: win-compileShaders.bat  win-genProjectsDebug.bat  win-genProjectsRelease.bat
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog
x64/Release/ALL_BUILD/: ALL_BUILD.recipe
x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog
x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
